Add responsive project website